--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       font-family: 'Sans'
     }
   </style>
-  <script src="fingerprint.js"></script>
+  <script src="fingerprint-0.5.4.js"></script>
 </head>
 <body>
   <div style="text-align: center;">
